# CheckAndPick

./: README.md  pyproject.toml  test.yaml
Workflow/: SDXL_LoRA_LCM_Lightning.json  SDXL_LoRA_LCM_Lightning_API.json
example/: model_setting.yaml
src/CheckAndPick/: CheckAndPick.py  __main__.py  comfy_api.py  config.py  generator.py
src/CheckAndPick/Workflow/: MultiPassSampling_I2I.json  MultiPassSampling_I2I_API.json  SDXL_HighReso_I2I.json  SDXL_HighReso_I2I_API.json  SDXL_LoRA_LCM_Lightning.json  SDXL_LoRA_LCM_Lightning_API.json
