[project]
name = "CheckAndPick"
version = "0.1.6"
description = "Image drafter."
readme = "README.md"
authors = [
    { name = "rerofumi", email = "rero2@yuumu.org" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "fm-comfyui-bridge>=0.6.3",
    "gradio>=5.9.1",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
CheckAndPick = "CheckAndPick.CheckAndPick:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

