[project]
name = "CheckAndPick"
version = "0.2.3"
description = "Image drafter."
readme = "README.md"
authors = [
    { name = "rerofumi", email = "rero2@yuumu.org" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "fm-comfyui-bridge>=0.6.3",
    "gradio>=5.9.1",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/rerofumi/CheckAndPick"

[project.scripts]
CheckAndPick = "CheckAndPick.CheckAndPick:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

